[package]
name = "reversi"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/zakharykaplan/reversi"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
gamesweet = { git = "https://github.com/zakharykaplan/gamesweet" }
